--- a/Wandering Stars/Assembly-CSharp.csproj
+++ b/Wandering Stars/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\Scripts\Asteroid.cs" />
     <Compile Include="Assets\Scripts\Asteroids.cs" />
     <Compile Include="Assets\Scripts\AsteroidWaveSystem.cs" />
+    <Compile Include="Assets\Scripts\AudioManager.cs" />
     <Compile Include="Assets\Scripts\Bullet.cs" />
     <Compile Include="Assets\Scripts\EuclideanTorus.cs" />
     <Compile Include="Assets\Scripts\GameUIManager.cs" />
